# personal_portfolio

./: .gitignore  README.md  pyproject.toml
app/blog/: models.py  urls.py  views.py
app/blog/migrations/: 0001_initial.py
app/blog/templates/blog/: all_blogs.html  detail.html
app/common/: views.py
app/config/: settings.py  urls.py
app/my_portfolio/: models.py  views.py
app/my_portfolio/migrations/: 0001_initial.py
app/my_portfolio/templates/my_portfolio/: base.html  portfolio.html
portfolio/blog/: models.py  urls.py  views.py
portfolio/blog/templates/blog/: all_blogs.html  detail.html
portfolio/my_portfolio/: models.py  views.py
portfolio/my_portfolio/migrations/: 0001_initial.py
portfolio/my_portfolio/templates/my_portfolio/: base.html  portfolio.html
portfolio/portfolio/: settings.py  urls.py
